[package]
name = "request-mjpeg-test"
version = "0.1.0"
authors = ["Tri <nguyenduongtri0503@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
image = "0.23.14"
futures-util = "0.3.15"
tracing-subscriber = "*"
digest_auth = "0.3.0"
http = "0.2.4"
surf = "2.2.0"
smol = "*"
hyper = { version = "0.14", features = ["full"] }
async-std = "*"